Move subscriptions from bot to TLM
